--- a/questions/Q01.md
+++ b/questions/Q01.md
@@ -4,3 +4,16 @@ What three components make up a JSON Web Token?
 
 ## Answer
 
+```
+Header
+typically consists of 2 parts:
+    - signing algorithm
+    - type (JWT)
+
+Payload
+stores information typically about the user (id, username)
+never store sensitive data
+
+Signature
+used by the server to verify that the JWT was created on the server and not altered
+```
