--- a/questions/Q02.md
+++ b/questions/Q02.md
@@ -4,3 +4,4 @@ What is Base64 and why is it used to construct a JWT?
 
 ## Answer
 
+Base64 is an encoding scheme that represents data in a long string format. This is used to construct a JTW by encoding the header and payload, then using a secret key combined with an algorithm to create the token.
