--- a/questions/Q03.md
+++ b/questions/Q03.md
@@ -4,3 +4,8 @@ What two pieces of information are used to construct the signature for a JWT?
 
 ## Answer
 
+```
+base64 encoded Header
+base64 encoded Payload
+secret
+```
