--- a/questions/Q04.md
+++ b/questions/Q04.md
@@ -3,6 +3,7 @@
 Create a JWT for the following and place it in the answer section:
 
 **Header**
+
 ```js
 {
     "alg": "HS256",
@@ -11,6 +12,7 @@ Create a JWT for the following and place it in the answer section:
 ```
 
 **Payload**
+
 ```js
 {
     "id": 153,
@@ -21,9 +23,15 @@ Create a JWT for the following and place it in the answer section:
 ```
 
 **Secret**
+
 ```
 87764d1a-92dc-4ced-a758-9c898c31d525
 ```
 
 ## Answer
 
+```
+eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.
+eyJpZCI6MTUzLCJ1c2VybmFtZSI6InNhbmNoZXoiLCJlbWFpbCI6InJpY2tAc2FuY2hlei5jb20iLCJyb2xlIjoiQURNSU4iLCJpYXQiOjE2NjIzNzEyMDh9.
+ou2Zvz2bNAMA5kG5oV0EuMHB5AyRggHUHMil_E09-Yc
+```
